<resources>
    <string name="app_name">LiteWeather</string>

    <string name="welcome">欢迎使用</string>
    <string name="guideline">
        <![CDATA[
        <h1><font color="#008577">欢迎使用</font></h1>
        <p>感谢您使用LiteWeather。</p>
        <br />
        <h1><font color="#008577">添加您关注的城市或地区</font></h1>
        <p>点击右下角<b><font color="#D81B60"> + </font></b>按钮，搜索城市并添加至首页吧！</p>]]>
    </string>

    <string name="every_3_hour_condition">每3小时天气情况</string>
    <string name="upcoming_7_hour_condition">未来7日天气情况</string>

    <string name="degree_celsius_unit">%s℃</string>
    <string name="feeling_temperature_prefix">体感温度：%s℃</string>
    <string name="possibility_of_rain">降水量：%s</string>
    <string name="humidity">相对湿度：%s%%</string>

    <string name="loading">载入中…</string>
    <string name="load_failed">载入失败</string>

    <string name="search_city">搜索城市</string>
    <string name="no_city_found">无搜索结果</string>
    <string name="city_exist">城市已存在</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_subtitle">mindjet.github.io</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_city">城市列表管理</string>
    <string name="menu_config">配置请求参数</string>
    <string name="menu_about">关于</string>
    <string name="app_version">应用版本</string>
    <string name="service_agreement">服务条款</string>
    <string name="feedback">问题反馈</string>
    <string name="issue_welcome">欢迎到 Github 上提 issue</string>
</resources>
